<resources>
    <string name="app_name">MusicQuizPlus</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="top_hits">Today\'s Top Hits</string>
    <string name="playlists">Playlists</string>
    <string name="guest">GUEST</string>
    <string name="artists">Artists</string>
    <string name="logged_out_artists">Save Your Favorite Albums With A MusicQuiz+ Account</string>
    <string name="link_google_to">\tLink your Google account to:</string>
    <string name="benefits_of_account">\t\tSave your favorite albums\n\t\tSave your favorite playlists\n\t\tAccess track history\n\t\tEarn experience points and badges</string>
    <string name="no_thanks"><u>No Thanks</u></string>
    <string name="history">History</string>
    <string name="guestUserHistory">Discover Your Jam on MusicQuiz+</string>
    <string name="sample_song_title">Sample Song Title</string>
    <string name="sample_artist">Sample Artist</string>
    <string name="middle_dot">·</string>
    <string name="sample_album">Sample Album</string>
    <string name="sample_year">1999</string>
    <string name="share">Share</string>
    <string name="view">View</string>
    <string name="user_profile_signup_header">Become A Music Wiz on MusicQuiz+</string>
    <string name="join_message_search_guest">Join MusicQuiz+ And Diversify Your Taste</string>
    <string name="playlist_by_spotify">Spotify</string>
    <string name="playlist_by">Playlist by </string>
    <string name="start_quiz">Play Quiz</string>
    <string name="guess_the_artist">Guess The Artist</string>
    <string name="guess_the_album">Guess The Album</string>
    <string name="quiz_results">Quiz Results</string>
    <string name="continueText">Continue</string>
    <string name="accuracy">Accuracy :</string>
    <string name="score">Score :</string>
    <string name="lvl">Lvl. </string>
    <string name="search_hint">Search for your favorite music</string>
    <string name="search_filter_all">ALL</string>
    <string name="search_filter_artist">ARTIST</string>
    <string name="search_filter_album">ALBUM</string>
    <string name="search_filter_song">SONG</string>
    <string name="search_filter_playlist">PLAYLIST</string>
    <string name="home_button_content_description">Home Button</string>
    <string name="back_to_top_content_description">Back to Top Button</string>
    <string name="bullet_char">•</string>
    <string name="latest">Latest</string>
    <string name="singles">Singles</string>
    <string name="albums">Albums</string>
    <string name="compilations">Compilations</string>
    <string name="suggested">SUGGESTED</string>
    <string name="title_match">TITLE MATCH</string>
    <string name="search_initial_text">Begin Typing To Search</string>
    <string name="search_no_results_text">No results found</string>
    <string name="brain_emoji">🧠</string>
    <string name="badges_label">Badges</string>
    <string name="hearted_artists_label">Hearted Artists</string>
    <string name="example_artist">Example Artist</string>
    <string name="_0">0</string>
    <string name="_0_10">0/10</string>
    <string name="_0_xp">+0 XP</string>
    <string name="score_label">Score</string>
    <string name="accuracy_label">Accuracy</string>
    <string name="you_earned">You earned</string>
    <string name="nothing_to_show_here">Nothing to show here...</string>
    <string name="score_0">Score: 0</string>
    <string name="mulitplier_1_0x">Mulitplier: 1.0x</string>
    <string name="saved_label">Saved</string>
    <string name="save_label">Save</string>
    <string name="saving_message">Saving...</string>
    <string name="removing_message">Removing...</string>
    <string name="loading_message">Generating Quiz.\nPlease Wait...</string>
    <string name="welcome_to_mqp">Welcome To Music Quiz Plus</string>
    <string name="select_a_playlist_to_be_quiz_on">Welcome To Music Quiz Plus!\nSelect A Playlist To Be Quiz On</string>
    <string name="loading_quiz">Loading Quiz...</string>
</resources>