<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_result_layout"
    android:background="@color/mqPurple2"
    android:layout_margin="1dp">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="80dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guidelineVert"
        android:orientation="vertical"
        android:elevation="2dp"
        app:layout_constraintGuide_percent=".70"/>

    <ImageView
        android:id="@+id/image"
        android:src="@drawable/placeholder"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/item_result_banner"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_margin="1dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <TextView
        android:id="@+id/item_result_banner_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/saved_banner_bg"
        android:paddingVertical="5dp"
        android:ellipsize="none"
        android:layout_marginLeft="-25dp"
        android:layout_marginTop="3dp"
        android:rotation="-40"
        android:text="@string/saved_label"
        android:textSize="10sp"
        android:paddingHorizontal="30dp"
        android:textColor="@color/mqWhite"
        android:fontFamily="@font/fugaz_one"
        android:textAllCaps="true"
        />
    </RelativeLayout>

    <TextView
        android:id="@+id/itemTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusedByDefault="true"

        android:fontFamily="@font/concert_one"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/sample_song_title"
        android:paddingLeft="10dp"
        android:textColor="@color/mqWhite"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@id/go_to_page_icon"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/commissioner"
        android:text="@string/sample_artist"
        android:paddingLeft="10dp"
        android:textColor="@color/mqWhite"
        android:textSize="12sp"
        android:layout_marginStart="2dp"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toBottomOf="@+id/itemTitle" />

    <ImageView
        android:id="@+id/go_to_page_icon"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:backgroundTint="@color/mqPurple2"
        android:src="@drawable/chevron_right"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>